updated using langgraph_travel_agent repo to search flight

--- a/archive/day-1b-agent-architectures.ipynb
+++ b/archive/day-1b-agent-architectures.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
     "#from kaggle_secrets import UserSecretsClient\n",
     "\n",
     "try:\n",
-    "    GOOGLE_API_KEY = 'AIzaSyCvk5uXuxH7HyjS_UIMh4PDbSvcL0shpA8'#UserSecretsClient().get_secret(\"GOOGLE_API_KEY\")\n",
+    "    GOOGLE_API_KEY = UserSecretsClient().get_secret(\"GOOGLE_API_KEY\")\n",
     "    os.environ[\"GOOGLE_API_KEY\"] = GOOGLE_API_KEY\n",
     "    print(\"✅ Gemini API key setup complete.\")\n",
     "except Exception as e:\n",
