--- a/archive/day-1a-from-prompt-to-action.ipynb
+++ b/archive/day-1a-from-prompt-to-action.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T21:55:23.989268Z",
@@ -175,7 +175,7 @@
     "#from kaggle_secrets import UserSecretsClient\n",
     "\n",
     "try:\n",
-    "    GOOGLE_API_KEY = 'AIzaSyCvk5uXuxH7HyjS_UIMh4PDbSvcL0shpA8'#UserSecretsClient().get_secret(\"GOOGLE_API_KEY\")\n",
+    "    GOOGLE_API_KEY = UserSecretsClient().get_secret(\"GOOGLE_API_KEY\")\n",
     "    os.environ[\"GOOGLE_API_KEY\"] = GOOGLE_API_KEY\n",
     "    print(\"✅ Gemini API key setup complete.\")\n",
     "except Exception as e:\n",
